# bouncing-text

./: .gitignore  LICENSE  README.md  bouncing_text.py  setup.cfg
tests/: test_bouncing_text.py
