[metadata]
name = bouncing-text
version = 0.1.0
description = text bouncing around the screen using curses
long_description = file: README.md
long_description_content_type = text/markdown
url =
author = Chad Larson
license = MIT
license_file = LICENSE

[options]
py_modules = bouncing_text
python_requires = >= 3.7

[options.packages.find]
exclude =
    tests*
    tests

[options.entry_points]
console_scripts =
    bouncing-text = bouncing_text:main